--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,18 @@ p  { font-size: var(--p);  font-weight: 400; color: var(--text-secondary); line-
   object-fit: contain;
 }
 
+.lottie-toggle {
+  width: 200px;
+  height: 200px;
+  cursor: pointer;
+  transition: transform 150ms ease-out;
+}
+
+.lottie-toggle:hover {
+  transform: scale(1.05);
+  transition: transform 150ms ease-in;
+}
+
 .lottie-heart {
   width: 150px;
   height: 150px;
